--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 		<header>
 			<div class="logo">
 				<i class="icon-money"></i>
-				<span style="color: #438c6f">Budget</span>App.com
+				<a href="index.html" target="_blank"><span style="color: #438c6f">Budget</span>App.com </a>
 				<i class="icon-money"></i>			
 			</div>
 			<p> Welcome to your personal finance manager</p>
@@ -29,12 +29,6 @@
 		
 		<main>	
 			<form>
-				<div class="icon">
-					<i class="icon-user"></i>				
-				</div>
-				<input type="text" placeholder="name" onfocus="this.placeholder=''" onblur="this.placeholder='Name'" >
-				<div style="clear:both;"></div>
-				
 				<div class="icon">
 					<i class="icon-mail-alt"></i>
 				</div>				
@@ -50,9 +44,10 @@
 				<div class="icon" style="margin-left: 180px;">
 					<i class="icon-login"></i>
 				</div>				
-				<input type="submit" value="Sign up!">
+				<input type="submit" value="Sign in!">
 				<div style="clear:both;"></div>		
-                <div class="text">Already have an account? <a href="login.html">Sign in!</a> </div>
+				<div class="text">Have no account yet? <a href="index.html">Sign up!</a> </div>
+
 			
 
 			</form>
