Added expense .html file and changed existed files

--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
 
 <body>
 
+	<header>
+		<div class="logo">
+			<i class="icon-money"></i>
+			<span style="color: #438c6f">Budget</span>App.com
+			<i class="icon-money"></i>			
+		</div>
+		<p> Welcome to your personal finance manager</p>
+	</header>
+
 	<div id="container">
-	
-		<header>
-			<div class="logo">
-				<i class="icon-money"></i>
-				<span style="color: #438c6f">Budget</span>App.com
-				<i class="icon-money"></i>			
-			</div>
-			<p> Welcome to your personal finance manager</p>
-		</header>
-		
 		<main>	
 			<form>
 				<div class="icon">
@@ -47,17 +46,14 @@
 				<input type="password" placeholder="password" onfocus="this.placeholder=''" onblur="this.placeholder='Password'" >
 				<div style="clear:both;"></div>	
 				
-				<div class="icon" style="margin-left: 180px;">
+				<div class="icon1" >
 					<i class="icon-login"></i>
 				</div>				
 				<input type="submit" value="Sign up!">
 				<div style="clear:both;"></div>		
                 <div class="text">Already have an account? <a href="login.html">Sign in!</a> </div>
-			
-
 			</form>
-		</main>
-		
+		</main>	
 	</div>
 	
 	<footer>		
