--- a/login.html
+++ b/login.html
@@ -16,17 +16,16 @@
 
 <body>
 
-	<div id="container">
+	<header>
+		<div class="logo">
+			<i class="icon-money"></i>
+			<a href="index.html" target="_blank"><span style="color: #438c6f">Budget</span>App.com </a>
+			<i class="icon-money"></i>			
+		</div>
+		<p> Welcome to your personal finance manager</p>
+	</header>
 	
-		<header>
-			<div class="logo">
-				<i class="icon-money"></i>
-				<a href="index.html" target="_blank"><span style="color: #438c6f">Budget</span>App.com </a>
-				<i class="icon-money"></i>			
-			</div>
-			<p> Welcome to your personal finance manager</p>
-		</header>
-		
+	<div id="container">
 		<main>	
 			<form>
 				<div class="icon">
@@ -41,18 +40,15 @@
 				<input type="password" placeholder="password" onfocus="this.placeholder=''" onblur="this.placeholder='Password'" >
 				<div style="clear:both;"></div>	
 				
-				<div class="icon" style="margin-left: 180px;">
+				<div class="icon1">
 					<i class="icon-login"></i>
 				</div>				
 				<input type="submit" value="Sign in!">
-				<div style="clear:both;"></div>		
+				<div style="clear:both;"></div>
+				
 				<div class="text">Have no account yet? <a href="index.html">Sign up!</a> </div>
-
-			
-
 			</form>
 		</main>
-		
 	</div>
 	
 	<footer>		
