--- a/main_menu.html
+++ b/main_menu.html
@@ -15,28 +15,28 @@
 </head>
 
 <body>
-
-	<div id="container">
+	<header>
+		<div class="logo">
+			<i class="icon-money"></i>
+			<a href="index.html" target="_blank"><span style="color: #438c6f">Budget</span>App.com </a>
+			<i class="icon-money"></i>			
+		</div>
+		<p> Welcome to your personal finance manager</p>
+	</header>
 	
-		<header>
-			<div class="logo">
-				<i class="icon-money"></i>
-				<a href="index.html" target="_blank"><span style="color: #438c6f">Budget</span>App.com </a>
-				<i class="icon-money"></i>			
-			</div>
-			<p> Welcome to your personal finance manager</p>
-		</header>
-		
-		<main>	
+	<div id="container">
+		<main>
+			<div class="rectangle">
 			<div class="tile1">
 				<a href="add_income" class="tilelink"><i class="icon-dollar"></i><br />Add income</a>
 			</div>
 			
 			<div class="tile1">
-				<a href="add_expense" class="tilelink"><i class="icon-dollar"></i><br />Add expense</a>
+				<a href="add_expense.html" class="tilelink" target="_blank"><i class="icon-dollar"></i><br />Add expense</a>
 			</div>
 			<div style="clear:both;"></div>
-			
+			</div>
+			<div class="rectangle">
 			<div class="tile1">
 				<a href="balance" class="tilelink"><i class="icon-chart-pie"></i><br />View balance</a>
 			</div>
@@ -44,16 +44,14 @@
 				<a href="settings" class="tilelink"><i class="icon-cog"></i><br />Settings</a>
 			</div>
 			<div style="clear:both;"></div>
-			
-			<div class="icon" style="margin-left: 180px;">
+			</div>
+			<div class="icon1" >
 				<i class="icon-logout"></i>
 			</div>	
 				
 			<a href="index.html" target="_blank"><input type="submit" value="Log out!"></a>
-			<div style="clear:both;"></div>
-			
-		</main>
-		
+			<div style="clear:both;"></div>		
+		</main>	
 	</div>
 	
 	<footer>		
