Added balance.html file

--- a/main_menu.html
+++ b/main_menu.html
@@ -38,17 +38,17 @@
 			</div>
 			<div class="rectangle">
 			<div class="tile1">
-				<a href="balance" class="tilelink"><i class="icon-chart-pie"></i><br />View balance</a>
+				<a href="balance.html" class="tilelink"><i class="icon-chart-pie"></i><br />View balance</a>
 			</div>
 			<div class="tile1">
 				<a href="settings" class="tilelink"><i class="icon-cog"></i><br />Settings</a>
 			</div>
 			<div style="clear:both;"></div>
 			</div>
+			
 			<div class="icon1" >
 				<i class="icon-logout"></i>
-			</div>	
-				
+			</div>					
 			<a href="index.html" target="_blank"><input type="submit" value="Log out!"></a>
 			<div style="clear:both;"></div>		
 		</main>	
