--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<p> Welcome to your personal finance manager</p>
 	</header>
 
-	<div id="container">
+	<div id="container1">
 		<main>	
 			<form>
 				<div class="icon">
