--- a/add_expense.html
+++ b/add_expense.html
@@ -38,7 +38,7 @@
 				</ul>
 			</nav>
 			
-			<section id="section1">
+			<div id="section1">
 				<div class="row">
 					<label> Amount: <input type="number" name="amount" ></label>
 				</div>
@@ -83,7 +83,7 @@
 					<textarea name="comment" id="comment" maxlength="25" minlength="10"></textarea>
 				</div>
 				
-			</section>
+			</div>
 			
 				<div class="row1">
 				
