--- a/main_menu.html
+++ b/main_menu.html
@@ -48,8 +48,11 @@
 			
 			<div class="icon1" >
 				<i class="icon-logout"></i>
-			</div>					
-			<a href="index.html" target="_blank"><input type="submit" value="Log out!"></a>
+			</div>		
+			
+			<a href="index.html" target="_blank">
+				<input type="submit" value="Log out!">
+			</a>
 			<div style="clear:both;"></div>		
 		</main>	
 	</div>
