--- a/add_expense.html
+++ b/add_expense.html
@@ -2,30 +2,65 @@
 
 <html lang="pl">
 <head>
-	<meta charset="utf-8" />
-	<title>BudgetApp</title>
-	<meta name="description" content="Take responsibility for your finances" />
-	<meta name="keywords" content="budget, control, personal, application, finances" />
-  <meta http-equiv="X-Ua-Compatible" content="IE=edge">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		
+		 <!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		
+		<meta name="description" content="Take responsibility for your finances" />
+		<meta name="keywords" content="budget, control, personal, application, finances" />
+		<meta http-equiv="X-Ua-Compatible" content="IE=edge">
 
-	<link rel="stylesheet" href="css/fontello.css">
-	<link rel="stylesheet" href="style.css" type="text/css" />
-	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato:wght@400;900&display=swap" rel="stylesheet">
-	
+		<link rel="stylesheet" href="css/fontello.css">
+		<link rel="stylesheet" href="style.css" type="text/css" />
+		<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lato:wght@400;900&display=swap" rel="stylesheet">
+		
+		<title>BudgetApp</title>	
 </head>
 
 <body>
 
-		<header>
-			<div class="logo">
-				<i class="icon-money"></i>
-				<a href="index.html" target="_blank"><span style="color: #438c6f">Budget</span>App.com </a>
-				<i class="icon-money"></i>			
-			</div>
-			<p> Welcome to your personal finance manager</p>
-		</header>
+
+		<header>    
 		
-	<div id="container">	
+			<h1 class="mt-3 mb-1" id="title">
+						<a id="mainButton" href="index.html" target="_blank" role="button"><span id="logo">Budget</span>App.com</a>
+			</h1>
+			
+			<div id="subtitle">
+				Welcome to your personal finance manager
+			</div>  
+			
+		 </header>
+
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+        <a href="#" class="navbar-brand">Home</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navLinks">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="" class="nav-link">Add Income</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Add Expense</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Balance</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Settings</a>
+                </li>               
+				<li class="nav-item">
+                    <a href="" class="nav-link">Log out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+		
+	<!--<div id="container">	
 		<main>	
 		
 			<nav class="topnav">
@@ -93,13 +128,21 @@
 				</div>
 	
 		</main>		
-	</div>
+	</div>-->
 	
-	<footer>		
-		<div class="info">
-				BudgetApp.com &copy; 2022
-		</div>	
-	</footer>
+        <footer>
+            
+            <div class="col my-2 footer">
+                2022 &copy; BudgetApp.com
+            </div>
+            
+        </footer>
+			<!-- Optional JavaScript -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 	
 </body>
 </html>
