--- a/add_income.html
+++ b/add_income.html
@@ -81,7 +81,7 @@
 
 			<main>
 				<h3 id="title01"> ADDING INCOME </h3>
-				<form class="col-sm-10  mx-auto " method="#" action="#" id="addExpense">
+				<form class="col-sm-10  mx-auto "  id="addExpense">
 					<div class="row justify-content-around">
 						<div class="col-xs-8">
 						
