--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	
 	<main>			
 		<section class="container-fluid square mt-5 mb-5">
-        	<form class="col-sm-10  mx-auto " method="#" action="#" id="signupForm">
+        	<form class="col-sm-10  mx-auto " id="signupForm">
 				<div class="row justify-content-around">
 					<div class="col-sm-6">
                     	<div class="input-group mt-3">
